# XCios

./: .gitignore  LICENSE  README.md  Sample.xfrp  dune-project  parser.mly  sample.mfrp  syntax.ml  syntax.txt
src/: alloc.ml  check.ml  codegen.ml  data.ml  dependency.ml  dune  env.ml  extension.ml  extension.mli  gather.ml  gather.mli  gatherUsed.mli  lexer.mll  lifetime.ml  lifetime.mli  main.ml  metaInfo.ml  parser.mly  syntax.ml  type.ml  typing.ml
src/ast/: dune  syntax.ml  type.ml
src/codegen/: codegen.ml  codegenUtil.ml  dune  genDataType.ml  genElementFun.ml  genExpr.ml  genFun.ml  genGlobal.ml  genMemory.ml  genMode.ml  genTypeFun.ml
src/codegen/codegenUtil/: codegenUtil.ml  dune
src/codegen/genFun/: dune  genExpr.ml  genFun.ml  genGlobalFun.ml  genIterFun.ml  genMaterialFun.ml  genModeFun.ml  genModuleElemFun.ml  genModuleFreeFun.ml  genModuleFun.ml  genModuleModeFun.ml  genModuleUpdateFun.ml  genNewnodeFun.ml  genStateFun.ml  genTypeFun.ml
src/dependency/: dependency.ml  dune
src/extension/: dune  extension.ml  extension.mli
src/infer/: dune  env.ml  errors.ml  typing.ml
src/metaInfo/: allElements.ml  alloc.ml  alloc.mli  dune  gatherUsed.ml  gatherUsed.mli  metaInfo.ml  moduleData.ml  moduleData.mli  typeData.ml
src/parser/: check.ml  dune  lexer.mll  parser.mly
test/: GPSWatch.xfrp  Test1.cpp  Test1.h  Test1.xfrp  Test2.cpp  Test2.h  Test2.xfrp
test/GPSWatch/: GPSWatch.xfrp  GPSWatchMain.c  GPSWatchMain.cpp
test/GPSWatch2/: GPSWatch2.xfrp  GPSWatch2Main.c  GPSWatch2Main.cpp
test/Watch/: CountDown.xfrp  CountUp.xfrp  Main.xfrp  (+2 more)
(+4 files in other folders)
